--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-window": "^1.8.6",
+    "redux": "^4.0.5",
     "socket.io": "^3.0.3",
     "socket.io-client": "^3.0.3",
     "web-vitals": "^0.2.4"
