--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "admin-on-rest": "^1.4.1",
     "axios": "^0.21.0",
     "history": "^5.0.0",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-window": "^1.8.6",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
     "socket.io": "^3.0.3",
     "socket.io-client": "^3.0.3",
     "web-vitals": "^0.2.4"
